--- a/assets/Css/default.css
+++ b/assets/Css/default.css
@@ -99,3 +99,44 @@ box-shadow: 0 5px  10px #333;
     font-size: 13px;
     color: #999;
 }
+.section-ptojects{
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+
+
+
+
+}
+.section-projects--filters{
+    border: 1px solid #ccc;
+    background-color: #eee;
+    border-radius: 30px;
+    display: inline-block;
+    padding: 0px 20px;
+    margin: auto;
+    
+}
+.section-projects--filters ul,
+.section-projects--filters li{
+    list-style: none;
+
+}
+.section-projects--filters li{
+    display: inline-block;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 13px;
+    border-left: 1px solid #ccc;
+    color: #555;
+    border-bottom:3px solid #eee ;
+    cursor: pointer;
+
+}
+.section-projects--filters li:hover,
+.section-projects--filters li.active{
+    border-bottom: 3px solid #b28756;
+}
+.section-projects--filters li:first-child{
+border-left: 0;
+}
