--- a/assets/Css/our-team.css
+++ b/assets/Css/our-team.css
@@ -4,8 +4,29 @@
     background-position: center;
     padding:0;
 }
+.section-team{
+    overflow: hidden;
+}
 .section-team-area{
-    background-color: rgba(0, 0, 0, 0.8);
-    padding-top:50px ;
-    padding-bottom: 50px;
+background-color: rgba(0, 0, 0, 0.8);
+padding-top:50px ;
+padding-bottom: 50px;
+}
+.section-team .sliders{
+width: 100%;   
+height: 100%;
+}
+.section-team .slide{
+width:100% ;
+height:100% ;
+display:inline-block;
+background-color:rgba(0, 0, 0, 0.8);
+}
+
+.section-team .slidearea{
+height: 100%;
+align-items: center;
+justify-content: space-around;
+color:white;
+
 }
