--- a/assets/Css/our-team.css
+++ b/assets/Css/our-team.css
@@ -15,12 +15,15 @@ padding-bottom: 50px;
 .section-team .sliders{
 width: 100%;   
 height: 100%;
+display: flex;
 }
 .section-team .slide{
 width:100% ;
 height:100% ;
+min-height: 300px;
 display:inline-block;
-background-color:rgba(0, 0, 0, 0.8);
+background-color:white;
+margin-right: 20px;
 }
 
 .section-team .slidearea{
@@ -31,4 +34,23 @@ align-items: center;
 justify-content: center;
 color:white;
 
+}
+.section-team-area .sliders-pointers{
+    margin-top: 30px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.section-team-area .pointer{
+    width: 15px;
+    height: 15px;
+    border: 2px solid #b28756;
+    border-radius: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.section-team-area .pointer.active{
+    background-color: #b28756;
 }
