--- a/assets/Css/our-team.css
+++ b/assets/Css/our-team.css
@@ -434,3 +434,60 @@ margin: auto;
     height: auto;
 
 }
+footer{
+    background-color: #000;
+    padding: 20px;
+}
+.footer-area{
+    display: flex;
+    max-width: 1140px;
+    color: #fff;
+    margin: auto;
+
+}
+.footer-area1{
+    flex: 1;
+}
+.footer-area2{
+    color: #999;
+    line-height: 20px;
+    font-size: 13px;
+    padding: 0 10px 10px 10px;
+    flex: 1;
+}
+.footer-area3{
+    flex: 1;
+}
+.footer-area3 form{
+    background-color: #333;
+    text-align: center;
+    padding: 30px;
+}
+.footer-social{
+    display: flex;
+    color: #fff;
+}
+.footer-social a{
+    width: 25px;
+    height: 25px;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 13px;
+    margin-right: 10px;
+}
+.footer-social img{
+    height: 10px;
+}
+.footer-area3 input{
+    width: 100%;
+    height: 40px;
+    border: 0;
+    background: transparent;
+    border-bottom: 1px solid #CCC;
+    outline: 0;
+    color: #FFF;
+    font-size: 14px;
+    text-align: center;
+}
