--- a/assets/Css/media.css
+++ b/assets/Css/media.css
@@ -1,14 +1,37 @@
 @media (min-width:450px) and (max-width:800px){
+   .menu-opener{
+      width: 45px; 
+      margin-right: 30px;
+      display: block;
+   }
+   
     nav{
-        /*display:none;*/
+        display:none;
         position: absolute;
         z-index: 99;
-        background-color: rgba(0, 0, 0, 0.8);
+        background-color: rgba(0, 0, 0, 0.9);
         width: 70%;
         height: calc(100vh - 100px);
         top: 100px;
         right: 0;
+}
+.logo{
+    margin-left:30px ;
+}
 
-    
-    }
+.menu ul{
+    flex-direction: column;
+}
+.menu li a{
+    font-weight: bold;
+    height: 80px;
+    font-size:27px;
+    margin-right: 50px;
+    border: 0;
+}
+.menu li.active a{
+    display: block;
+    border: 0;
+    color: #b28756;
+}
 }
