--- a/assets/Css/style1.css
+++ b/assets/Css/style1.css
@@ -56,6 +56,9 @@ justify-content: flex-end;
    align-items: center;
    border-bottom:5px solid black ;
 }
+.menu-opener{
+    display: none;
+}
 .menu li a:hover {
     border-bottom: 5px solid #b28756;
     color: #ccc;
