--- a/assets/Css/media.css
+++ b/assets/Css/media.css
@@ -34,4 +34,62 @@
     border: 0;
     color: #b28756;
 }
+.section-aboutus{
+flex-direction: column;
+
+}
+.section-aboutus--left{
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+.section-aboutus--right{
+    width: auto;
+}
+.section-services{
+    flex-wrap:wrap;
+}
+.section-service{
+    min-width: 50%;
+    margin-bottom: 30px;
+}
+.section-service:first-child{
+    border-left: 0;
+}
+.section-team{
+    max-width: 500px;
+    margin: auto;
+}
+.products-area{
+    flex-wrap: wrap;
+}
+.products{
+    min-width: 30%;
+    margin-bottom: 30px;
+}
+.price-area{
+    flex-wrap: wrap;
+}
+.price-table-area{
+    min-width: 40%;
+    margin-bottom: 30px;
+    margin-left: 15px;
+}
+.facts{
+    flex-wrap: wrap;
+}
+.fact{
+    min-width: 50%;
+    margin-bottom: 30px;
+}
+.section-map{
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.section-map--info{
+    width: auto;
+}
+.section-map--area {
+  width: auto;
+}
 }
