--- a/assets/Css/media.css
+++ b/assets/Css/media.css
@@ -92,4 +92,159 @@ flex-direction: column;
 .section-map--area {
   width: auto;
 }
+.section-map--info-item{
+margin-bottom: 20px;
 }
+.section-map--info-item:last-child{
+margin-bottom: 0;
+}
+
+}
+
+@media  (max-width:450px){
+    
+    .menu-opener{
+       width: 45px; 
+       margin-right: 30px;
+       display: block;
+    }
+    
+     nav{
+         display:none;
+         position: absolute;
+         z-index: 99;
+         background-color: rgba(0, 0, 0, 0.9);
+         width: 80%;
+         height: calc(100vh - 100px);
+         top: 100px;
+         right: 0;
+ }
+ .logo{
+     margin-left:30px ;
+ }
+ 
+ .menu ul{
+     flex-direction: column;
+ }
+ .menu li a{
+     font-weight: bold;
+     height: 60px;
+     font-size:20px;
+     margin-right: 30px;
+     border: 0;
+ }
+ .menu li.active a{
+     display: block;
+     border: 0;
+     color: #b28756;
+ }
+ .banner h1{
+     font-size: 30px;
+ }
+ .banner h2{
+     font-size: 17px;
+ }
+ .banner .sliders-pointers{
+     margin-top: 650px;
+ }
+
+ .section-aboutus{
+ flex-direction: column;
+ 
+ }
+ .section-aboutus--left{
+     margin-left: 30px;
+     margin-right: 30px;
+     margin-bottom: 30px;
+ }
+ .section-aboutus--right{
+     width: auto;
+     margin-left: 30px;
+     margin-right: 30px;
+ }
+ .section-aboutus--right img{
+     width: 100%;
+ }
+ .section-services{
+     flex-wrap:wrap;
+ }
+ .section-service{
+     min-width: 100%;
+     margin-bottom: 30px;
+ }
+ .section-service:first-child{
+     border-left: 0;
+ }
+ 
+ .section-projects--filters{
+     margin-left: 30px;
+     margin-right: 30px;
+ }
+ .section-projects--photo{
+     width: 320px;
+ }
+ .section-projects--photoarea{
+     width: 300px;
+     height: 190px;
+ }
+ .section-team{
+    max-width: 240px;
+    margin: auto;
+}
+.section-premium .slidearea{
+    flex-direction: column;
+}
+.section-premium-left{
+    text-align:center;
+    margin-bottom:30px;
+}
+.section-premium-right{
+    padding-right: 20px;
+    padding-left: 30px;
+}
+.livro{
+    width: 300px;
+    margin-right: 100px;
+
+}
+ .section-te
+ .products-area{
+     flex-wrap: wrap;
+ }
+ .products{
+     min-width: 30%;
+     margin-bottom: 30px;
+ }
+ .price-area{
+     flex-wrap: wrap;
+ }
+ .price-table-area{
+     min-width: 40%;
+     margin-bottom: 30px;
+     margin-left: 15px;
+ }
+ .facts{
+     flex-wrap: wrap;
+ }
+ .fact{
+     min-width: 50%;
+     margin-bottom: 30px;
+ }
+ .section-map{
+     padding:0;
+     padding-bottom:250px ;
+ }
+ .section-map--info{
+     width: auto;
+ }
+ .section-map--area {
+   width: auto;
+ }
+ .section-map--info-item{
+ margin-bottom: 20px;
+ }
+ .section-map--info-item:last-child{
+ margin-bottom: 0;
+ }
+ 
+ }
