--- a/assets/Css/media.css
+++ b/assets/Css/media.css
@@ -187,41 +187,73 @@ margin-bottom: 0;
      width: 300px;
      height: 190px;
  }
- .section-team{
-    max-width: 240px;
-    margin: auto;
+.section-team{
+max-width: 240px;
+margin: auto;
 }
 .section-premium .slidearea{
-    flex-direction: column;
+flex-direction: column;
 }
 .section-premium-left{
-    text-align:center;
-    margin-bottom:30px;
+text-align:center;
+margin-bottom:30px;
 }
 .section-premium-right{
-    padding-right: 20px;
-    padding-left: 30px;
+padding-right: 20px;
+padding-left: 20px;
+}
+.premium-item  h4 div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 25px;
+  
+  
+}
+.section-share{
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+.share-legend{
+    width:100vw;
+    margin:0;
+    margin-bottom: 40px;
+    justify-content: center;
+}
+.share-item{
+    min-width: 50%;
+    max-width: 50%;
+    margin: 0;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 20px;
 }
 .livro{
     width: 300px;
     margin-right: 100px;
 
 }
- .section-te
- .products-area{
-     flex-wrap: wrap;
+.products-area{
+flex-wrap: wrap;
+
  }
  .products{
-     min-width: 30%;
-     margin-bottom: 30px;
+ min-width:50%;
+ margin-bottom: 20px;
+ 
+ 
+ 
+     
  }
  .price-area{
      flex-wrap: wrap;
  }
  .price-table-area{
-     min-width: 40%;
+     min-width: calc(100% -40px);
      margin-bottom: 30px;
-     margin-left: 15px;
+     margin-left: 20px;
+     
+     
  }
  .facts{
      flex-wrap: wrap;
