--- a/assets/Css/our-team.css
+++ b/assets/Css/our-team.css
@@ -152,8 +152,11 @@ margin-right: 10px;
     padding-left: 50px;
     
 }
+
 .products{
-    padding-left: 50px;
+    flex: 1;
+    text-align: center;
+    
 }
 .price-light {
     background-color: #f7f7f7;
@@ -218,9 +221,14 @@ margin-right: 10px;
     padding-left: 60px;
     
 }
+.section-premium .slide{
+    width: 100vw;
+    height: 100%;
+    display: inline-block;
+}
 .premium-item{
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom:20px;
 }
 
 .premium-item img{
