--- a/assets/Css/media.css
+++ b/assets/Css/media.css
@@ -278,5 +278,22 @@ flex-wrap: wrap;
  .section-map--info-item:last-child{
  margin-bottom: 0;
  }
+ .section-contact{
+max-width: 100vw;
+margin-left: 20px;
+margin-right: 20px;
+ }
+ .contact-split{
+     flex-direction: column;
+ }
+ .footer-area{
+     flex-direction: column;
+ }
+.footer-areas{
+    margin-bottom: 20px;
+}
+.footer-social{
+    justify-content: center;
+}
  
  }
