--- a/assets/Css/our-team.css
+++ b/assets/Css/our-team.css
@@ -453,20 +453,20 @@ footer{
     margin: auto;
 
 }
-.footer-area1{
+.footer-areas .item1{
     flex: 1;
 }
-.footer-area2{
+.footer-areas .item2{
     color: #999;
     line-height: 20px;
     font-size: 13px;
     padding: 0 10px 10px 10px;
     flex: 1;
 }
-.footer-area3{
+.footer-areas .item3{
     flex: 1;
 }
-.footer-area3 form{
+.footer-areas.item3 form{
     background-color: #333;
     text-align: center;
     padding: 30px;
@@ -488,7 +488,7 @@ footer{
 .footer-social img{
     height: 10px;
 }
-.footer-area3 input{
+.footer-areas.item3 input{
     width: 100%;
     height: 40px;
     border: 0;
