--- a/assets/Css/media.css
+++ b/assets/Css/media.css
@@ -21,6 +21,7 @@
 
 .menu ul{
     flex-direction: column;
+    list-style: none;
 }
 .menu li a{
     font-weight: bold;
@@ -28,6 +29,10 @@
     font-size:27px;
     margin-right: 50px;
     border: 0;
+    list-style: none;
+}
+.menu-opened{
+    width: 200px;
 }
 .menu li.active a{
     display: block;
